# agent-cli

./: .gitignore  Cargo.toml  README.md  README_EN.md  README_new.md  config_backup.json  config_temp.json  config_temp.toml  config_test.json  demo_remote_instruction.py  log4rs.yaml  napcat_temp.toml  编译拷贝.bat  运行Target.bat
.github/workflows/: codeql-analysis.yml  release.yml
docs/: README_EN.md  acp_development_guide.md  acp_example.md  acpagent_example.md  remote_instructions.md  remote_protocol.md
src/: chat.rs  config.rs  main.rs  mcp.rs  prompt.rs
src/acp/: agent_impl.rs  connection.rs  handler.rs  mod.rs  server.rs  transport.rs  types.rs
src/acp/transport/: http_transport.rs  stdio_transport.rs  ws_transport.rs
src/chat/: chat_state.rs  chat_stream.rs  chat_tools.rs
src/client/: chat_client.rs  mod.rs  tool_client.rs
src/connection/: cache.rs  common.rs  mod.rs
src/mcp/: mcp_manager.rs  mcp_server.rs  mcp_tool.rs  mod.rs  tool_desc.rs
src/mcp/internalserver/: choosetool.rs  filesystem.rs  getbesttool.rs  mod.rs  shell_command.rs
src/model/: deepseek.rs  mod.rs  param.rs
src/napcat/: event.rs  mod.rs  napcat_client.rs  napcatconfig.rs
src/remote/: client_handler.rs  commands.rs  mod.rs  protocol.rs  server.rs
src/remote/handlers/: base_handler.rs  chat_handler.rs  clear_context_handler.rs  command_handler.rs  instruction_handler.rs  interrupt_handler.rs  mod.rs  (+3 more)
src/tui/: app.rs  appchat.rs  appevent.rs  chat_handler.rs  command_suggestions.rs  commands.rs  event_handler.rs  inputarea.rs  messageblock.rs  messagetext.rs  mod.rs  perf_monitor.rs  renderer.rs  state_manager.rs
(+7 files in other folders)
