[package]
name = "agent-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.17.1"
rmcp = { version = "0.5.0", features = [
    "client", 
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "transport-sse-client",
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3.31"
toml = "0.9.5"
anyhow = "1.0.99"
log = "0.4"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
env_logger = "0.11.8"
thiserror = "2.0.15"
