[package]
name = "agent-cli"
version = "0.6.1"
edition = "2024"

[features]
default = ["napcat"]
napcat = ["onebot_v11"]

[dependencies]
rmcp = { version = "0.6.0", features = [
    "client", 
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "transport-sse-client",
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
futures = "0.3.31"
futures-util = "0.3.31"
toml = "0.9.5"
anyhow = "1.0.99"
log = "0.4"
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3"
thiserror = "2.0.15"
reqwest = { version = "0.12", features = ["json"] }
log4rs = "1.3.0"
async-trait = "0.1.89"
async-recursion = "1.1.1"
tokio-util = "0.7.16"
ratatui = "0.29.0"
color-eyre = "0.6.5"
unicode-width = "0.2.0"
onebot_v11 = {version = "0.1.5", optional = true}
